src/objects/POLineItem__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Line Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CancelFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cancel Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ChangeRequestPOLineItem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Change Request PO Line Item</label>
        <referenceTo>POLineItem__c</referenceTo>
        <relationshipLabel>PO Line Items</relationshipLabel>
        <relationshipName>Versions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Class__c</fullName>
        <label>Class</label>
        <picklist>
            <picklistValues>
                <fullName>Service</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ExpenditureType__c</fullName>
        <label>Expenditure Type</label>
        <picklist>
            <picklistValues>
                <fullName>SUBC- IT Outside Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SUBC-Architechtural</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SUBC-Audit Fees</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SUBC-Civil Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SUBC-Director Fees</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SUBC-Drafting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SUBC-Electrical Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SUBC-Estimating</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SUBC-IT Prof. Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SUBC-Inter Project Manual Bill</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SUBC-Interco Receiver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SUBC-Interco Service Provision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SUBC-Interproject Service Prov</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SUBC-Land Survey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SUBC-Legal Fees - Allowable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SUBC-Legal Fees - E&amp;O</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SUBC-Legal Fees - Unallw</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SUBC-Major Trades</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SUBC-Mechanical Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SUBC-Outside Services - Allow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SUBC-Outside Services - Unallw</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SUBC-Professional Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SUBC-Purchased Labor - Fringe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SUBC-Purchased Labor - OH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SUBC-Purchased Labor - Premium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SUBC-Purchased Labor - Regular</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SUBC-Quality Assurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SUBC-Structural Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SUBC-Subconsultant Accrual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SUBC-Subconsultant Exempt</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FFPOLineId__c</fullName>
        <formula>VALUE(SUBSTITUTE( Name , &apos;POLI-&apos;, &apos;&apos;) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FF PO Line Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IsArchived__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If true the record was created from a change request</description>
        <label>Is Archived</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsLocked__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This get&apos;s set to True when the Purchase Order is Approved. The requirement is that once a PO has been approved, the PO Line Item cannot be edited,but you can still add additional PO Line items, but can&apos;t edit existing ones.</description>
        <label>IsLocked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LineDescription__c</fullName>
        <label>Line Description</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LineItemDescription__c</fullName>
        <formula>CASE(TEXT( LineItemType__c ),
&apos;Outside processing&apos;,&apos;Outside processing line type&apos;,
&apos;Goods&apos;,&apos;All goods that are individually recorded and printed out (by item class, unit, and unit price)&apos;,
&apos;IGC CONTRACT COMMITMENT&apos;,&apos;IGC CONTRACT COMMITMENT&apos;,
&apos;Services (Rate)&apos;,&apos;Services charged by rate&apos;,
&apos;Services (Amount)&apos;,&apos;Services charged by amount&apos;,
&apos;Rate Based Temp Labor&apos;,&apos;Rate Based Temporary Labor&apos;,
&apos;Fixed Price Temp Labor&apos;,&apos;Fixed Price Temporary Labor&apos;,
&apos;Fixed Price Services&apos;,&apos;Fixed Price Services&apos;,
&apos;SOV Fixed&apos;,&apos;Fixed Price&apos;,
&apos;SOV Quantity&apos;,&apos;SOV Quantity&apos;,&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Line Item Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LineItemType__c</fullName>
        <label>Line Item Type</label>
        <picklist>
            <picklistValues>
                <fullName>Outside processing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Goods</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IGC CONTRACT COMMITMENT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Services (Rate)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Services (Amount)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rate Based Temp Labor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fixed Price Temp Labor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fixed Price Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SOV Fixed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SOV Quantity</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LineNumber__c</fullName>
        <label>Line Number</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LineTypeId__c</fullName>
        <formula>CASE(TEXT( LineItemType__c ),
&apos;Outside processing&apos;,&apos;3&apos;,
&apos;Goods&apos;,&apos;1&apos;,
&apos;IGC CONTRACT COMMITMENT&apos;,&apos;1000&apos;,
&apos;Services (Rate)&apos;,&apos;1020&apos;,
&apos;Services (Amount)&apos;,&apos;1021&apos;,
&apos;Rate Based Temp Labor&apos;,&apos;4&apos;,
&apos;Fixed Price Temp Labor&apos;,&apos;5&apos;,
&apos;Fixed Price Services&apos;,&apos;6&apos;,
&apos;SOV Fixed&apos;,&apos;1022&apos;,
&apos;SOV Quantity&apos;,&apos;1023&apos;,&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Line Type Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LineType__c</fullName>
        <label>Line Type</label>
        <picklist>
            <picklistValues>
                <fullName>Unit Rate</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Fixed Fee</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>OracleLineType__c</fullName>
        <formula>IF( ISPICKVAL( LineType__c , &apos;Unit Rate&apos;) , &apos;Goods&apos;, &apos;Services (Amount)&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Oracle Line Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OraclePOID__c</fullName>
        <formula>POHeader__r.OraclePurchaseOrderId__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Purchase Order Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OraclePONumber__c</fullName>
        <formula>POHeader__r.OraclePurchaseOrderNumber__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Purchase Order Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OracleSyncDatetime__c</fullName>
        <description>Timestamp when oracle sync attempt last occurred</description>
        <label>Oracle Sync Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OracleSyncStatus__c</fullName>
        <description>P = Pending 
T = Transfer (Success) 
E = Error 
S = Successful</description>
        <inlineHelpText>P = Pending 
T = Transfer (Success) 
E = Error 
S = Successful</inlineHelpText>
        <label>Oracle Sync Status</label>
        <picklist>
            <picklistValues>
                <fullName>E</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>S</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>OracleUnitOfMeasure__c</fullName>
        <formula>IF( ISPICKVAL( UnitofMeasure__c , &apos;Each&apos;) , &apos;EACH&apos;, &apos;AMT&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Oracle Unit of Measure</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>POHeader__c</fullName>
        <label>Purchase Order</label>
        <referenceTo>POHeader__c</referenceTo>
        <relationshipLabel>PO Line Items</relationshipLabel>
        <relationshipName>POLineItems</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ProjectTask__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Project Task</label>
        <referenceTo>pse__Project_Task__c</referenceTo>
        <relationshipLabel>Purchase Order Line Items</relationshipLabel>
        <relationshipName>POLineItemsProjectTask</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Revision__c</fullName>
        <label>Revision</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SubClass__c</fullName>
        <label>Sub Class</label>
        <picklist>
            <picklistValues>
                <fullName>Subcontractor</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <formula>Amount__c *  Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UnitOfMeasureUserDefined__c</fullName>
        <label>Unit Of Measure User Defined</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UnitPrice__c</fullName>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UnitofMeasure__c</fullName>
        <label>Unit of Measure</label>
        <picklist>
            <picklistValues>
                <fullName>Each</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Lump Sum</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>PO Line Item</label>
    <nameField>
        <displayFormat>POLI-{0000000}</displayFormat>
        <label>Line Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PO Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Locked_PO_Line_Item_cant_be_updated</fullName>
        <active>true</active>
        <errorConditionFormula>IsLocked__c</errorConditionFormula>
        <errorMessage>This PO Line Item cannot be edited because It&apos;s Purchase Order has been approved before.</errorMessage>
    </validationRules>
</CustomObject>